# rehash

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  conversation_list.csv  pyproject.toml  rehash_export_split.py  requirements.txt
0522out/2025-04-20/: 2025-04-20__phd-fitness-origin-gpt-4o.json
0522out/2025-04-21/: 2025-04-21__phd-fitness-origin-gpt-4o.json
0522out/2025-04-23/: 2025-04-23__phd-fitness-origin-gpt-4o.json
0522out/2025-04-27/: 2025-04-27__phd-fitness-origin-gpt-4o.json
0522out/2025-04-28/: 2025-04-28__alric-was-phd-fitness-04-28-5-6-borked.json
0522out/2025-04-30/: 2025-04-30__alric-was-phd-fitness-04-28-5-6-borked.json
0522out/2025-05-02/: 2025-05-02__alric-was-phd-fitness-04-28-5-6-borked.json
0522out/2025-05-03/: 2025-05-03__alric-was-phd-fitness-04-28-5-6-borked.json  2025-05-03__phd-rehydrate-program-progress.json  2025-05-03__phd-workout-log-reconstruction.json
0522out/2025-05-04/: 2025-05-04__alric-was-phd-fitness-04-28-5-6-borked.json  2025-05-04__phd-workout-log-reconstruction.json
dev/v0.1.x/: REHYDRATION.md  (+4 more)
docs/: CHANGELOG.md  REQUIREMENTS-0.4.x.md  TASK_TRACKER.md  rehash_dev_requirements_v1.md  rehash_requirements.CANONICAL.md
test_misc/: conversation_list.csv  debug_output.txt  phd.csv
tests/: conftest.py
tools/: extract_rehash_from_csv.sh  phase0_rehash_repo_rehydrate_and_push_folders.sh  phase1_rehash_0.1.x_v2.2.2.sh  phase1_rehash_0.2.x_v2.2.3.sh  phase2_rehash_rehydrate_phase_0.2.x.sh  phase2_rehash_repo_rehydrate_phase_0.2.x_v2.2.4.sh  search_gpt.sh  split_conversation_by_day.py
(+82 files in other folders)
